# NoteProject

./: CMakeLists.txt  main.cpp
Headers/: Collection.h  CollectionNew.h  CollectionView.h  CollectionViewInterface.h  GameCharacter.h  Note.h  NoteInterface.h  NoteMenu.h  NoteNew.h  Observer.h  Subject.h  VideogameMapView.h
Output/: output.txt
Source/: Collection.cpp  CollectionNew.cpp  CollectionView.cpp  CollectionViewInterface.cpp  GameCharacter.cpp  Note.cpp  NoteInterface.cpp  NoteMenu.cpp  NoteNew.cpp  VideogameMapView.cpp
test/: CMakeLists.txt  CollectionFixture.cpp  CollectionNewTest.cpp  CollectionTest.cpp  CollectionViewTest.cpp  NoteNewTest.cpp  NoteTest.cpp
